--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "devDependencies": {
+    "@types/node": "^25.2.2",
     "vitepress": "2.0.0-alpha.15"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "markdown-it-task-lists": "^2.1.1"
   }
 }
