--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "@types/node": "^25.2.2",
-    "vitepress": "2.0.0-alpha.15"
+    "vitepress": "1.6.4"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
