--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/node": "^25.2.2",
+    "vite-plugin-pwa": "^1.2.0",
     "vitepress": "1.6.4"
   },
   "scripts": {
